syntax = "proto3";

package sonarlint;

// The java package can be changed without breaking compatibility.
// it impacts only the generated Java code.
option java_package = "org.sonarlint.eclipse.core.internal.proto";
option optimize_for = SPEED;

message Issues {
    repeated Issue issue = 1;

    message Issue {
        reserved 5, 9;
        string serverIssueKey = 1;
        string ruleKey = 2;
        int32 line = 3;
        string message = 4;
        string assignee = 6 [deprecated=true];
        int64 creationDate = 7;
        bool resolved = 8;
        string severity = 10;
        string type = 11;
        string textRangeDigest = 12;
        bool isOnNewCode = 13;
    }
}

message StorageIndex {
    map<string,string> mapped_path_by_key = 1;
}
